gates/fixtures/historical/kube/overlays/dev/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: institutional-defi-dev

resources:
  - ../../base
  - ingress.yaml
  - egress-app.yaml

nameSuffix: -dev

replicas:
  - name: regulatory-workbench
    count: 1

images:
  - name: institutional-defi-regulatory-workbench
    newName: 547729607601.dkr.ecr.us-east-1.amazonaws.com/institutional-defi-regulatory-workbench
    newTag: "INITIAL"

commonLabels:
  environment: dev
